--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -124,7 +124,9 @@
             jid: "{{ _kernel_build.ansible_job_id }}"
             mode: cleanup
 
-    - name: Let the kernel build finish before network proxy is started for the very first time
+    # Let the first kernel build succeed and the system been rebooted
+    # before Tor or Snowflake is started for the very first time
+    - name: Test at first Kernel build
       ansible.builtin.set_fact:
         _first_kernel_build_in_progress: "{{ (_ansible_tmp.changed and fire_and_forget and _kernel_build.changed) | bool }}"
 
