--- a/playbooks/roles/setup_tor/tasks/metrics-ddos.yaml
+++ b/playbooks/roles/setup_tor/tasks/metrics-ddos.yaml
@@ -17,7 +17,7 @@
       nice /root/metrics.sh 15
     state: "{{ torutils_metrics | ternary('present', 'absent') }}"
 
-- name: Getting process IDs of any running metrics script
+- name: Getting process IDs of any running DDoS metrics script
   community.general.pids:
     name: metrics.sh
   register: _metrics_ddos_pids_2_kill
