retry Go build due to erratic 403 returns

--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -44,6 +44,7 @@
   register: _snowflake_patched
 
 - name: Build
+  retries: 3
   changed_when: false
   ansible.builtin.command:
     cmd: go build -v
