add generic tag "kernel"

--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -83,18 +83,20 @@
     - name: Ensure desired distribution kernel is installed
       ansible.builtin.import_tasks: kernel-dist.yaml
       tags:
+        - kernel
         - kernel-dist
 
     - name: Check if reboot is needed
       ansible.builtin.import_tasks: reboot.yaml
 
-    - name: Ensure all needed Reboots/Restarts are amde
+    - name: Ensure scheduled reboot/restart is made
       ansible.builtin.meta: flush_handlers
 
     - name: Build self-compiled kernel
       when: kernel_git_version
       ansible.builtin.import_tasks: kernel-src.yaml
       tags:
+        - kernel
         - kernel-src
 
     - name: Metrics
@@ -105,6 +107,7 @@
 
     - name: Work on running kernel build job
       tags:
+        - kernel
         - kernel-src
       when: _kernel_build.changed
       block:
