add throttle to all lcoalhost calls

--- a/playbooks/roles/info_common/tasks/metrics.yaml
+++ b/playbooks/roles/info_common/tasks/metrics.yaml
@@ -1,6 +1,7 @@
 ---
 - name: File metrics port
   delegate_to: localhost
+  throttle: "{{ ansible_facts.processor_vcpus }}"
   when: metrics_port
   vars:
     __nm: "{{ (node_metrics | default(false)) | ternary(' # node_metrics', '') }}"
