--- a/playbooks/roles/info_tor/tasks/bridgeline.yaml
+++ b/playbooks/roles/info_tor/tasks/bridgeline.yaml
@@ -11,6 +11,7 @@
 
 - name: File bridgeline
   delegate_to: localhost
+  throttle: "{{ ansible_facts.processor_vcpus }}"
   vars:
     _torport: "{{ '%41s' | format(item) }}:{{ '%-5s' | format(tor_port) }}"
   ansible.builtin.lineinfile:
