--- a/playbooks/roles/info_tor/tasks/version.yaml
+++ b/playbooks/roles/info_tor/tasks/version.yaml
@@ -28,6 +28,7 @@
 
 - name: File version
   delegate_to: localhost
+  throttle: "{{ ansible_facts.processor_vcpus }}"
   vars:
     __package: "{{ ansible_facts.packages['tor'][0].version | default('-') }} {{ ansible_facts.packages['obfs4proxy'][0].version | default('-') }}"
     __version: "{{ _tor.stdout }} {{ _proxy.stdout | default('-') }}"
