--- a/playbooks/roles/info_snowflake/tasks/uptime.yaml
+++ b/playbooks/roles/info_snowflake/tasks/uptime.yaml
@@ -18,6 +18,7 @@
 
 - name: File uptime
   delegate_to: localhost
+  throttle: "{{ ansible_facts.processor_vcpus }}"
   vars:
     __starttime: "{{ _service.status.ExecMainStartTimestamp | default('-') }}"
     __changetime: "{{ _service.status.StateChangeTimestamp | default('-') }}"
