--- a/playbooks/roles/info_tor/tasks/clients.yaml
+++ b/playbooks/roles/info_tor/tasks/clients.yaml
@@ -13,6 +13,7 @@
 
 - name: File clients
   delegate_to: localhost
+  throttle: "{{ ansible_facts.processor_vcpus }}"
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} {{ _result.stdout }}"
     path: "{{ tmp_dir }}/tor_clients"
