--- a/playbooks/roles/info_tor/tasks/onionoo.yaml
+++ b/playbooks/roles/info_tor/tasks/onionoo.yaml
@@ -7,6 +7,7 @@
 
 - name: File onionoo
   delegate_to: localhost
+  throttle: "{{ ansible_facts.processor_vcpus }}"
   ansible.builtin.lineinfile:
     line: >-
       {{ inventory_hostname }}
