--- a/playbooks/roles/info_snowflake/tasks/version.yaml
+++ b/playbooks/roles/info_snowflake/tasks/version.yaml
@@ -7,7 +7,7 @@
   changed_when: false
   ansible.builtin.shell:
     cmd: |-
-      snowflake-proxy --version 2>&1 |
+      snowflake-proxy --version |
         head -n 1 |
         cut -f 2- -d ' ' |
         tr ' ' '_'
@@ -18,7 +18,8 @@
   throttle: "{{ ansible_facts.processor_vcpus }}"
   vars:
     __package: "{{ ansible_facts.packages['snowflake-proxy'][0].version | default('-') }}"
+    __version: "{{ _proxy_version.stdout | default('-') }}"
   ansible.builtin.lineinfile:
-    line: "{{ inventory_hostname }} sf {{ _proxy_version.stdout }} {{ __package }}"
+    line: "{{ inventory_hostname }} sf {{ __version }} {{ __package }}"
     path: "{{ tmp_dir }}/snowflake_version"
     regex: "^{{ inventory_hostname }} "
