--- a/playbooks/roles/info_tor/tasks/fingerprints.yaml
+++ b/playbooks/roles/info_tor/tasks/fingerprints.yaml
@@ -8,7 +8,7 @@
       echo "-"
   register: _result
 
-- name: Set fact
+- name: Set fact _fingerprint
   ansible.builtin.set_fact:
     _fingerprint: "{{ _result.stdout_lines[0] }}"
 
@@ -19,7 +19,7 @@
       ansible.builtin.command: cut -f 2 -d ' ' /var/lib/tor/fingerprint-ed25519
       register: _result
 
-    - name: Set fact
+    - name: Set fact _fingerprint_ed25519
       ansible.builtin.set_fact:
         _fingerprint_ed25519: "{{ _result.stdout_lines[0] }}"
 
@@ -27,11 +27,10 @@
   when: bridge_distribution
   block:
     - name: Get hashed fingerprint
-      when: bridge_distribution
       changed_when: false
       ansible.builtin.command: cut -f 2 -d ' ' /var/lib/tor/hashed-fingerprint
       register: _result
 
-    - name: Set fact
+    - name: Set fact _hashed_fingerprint
       ansible.builtin.set_fact:
         _hashed_fingerprint: "{{ _result.stdout_lines[0] }}"
