--- a/playbooks/roles/info_tor/tasks/log-err.yaml
+++ b/playbooks/roles/info_tor/tasks/log-err.yaml
@@ -7,7 +7,7 @@
         tail -n {{ log_lines }}
   register: _result
 
-- name: Results of error log check
+- name: Results of log-error {{ log_lines }} last lines
   when: _result.stdout_lines
   ansible.builtin.debug:
     var: _result.stdout_lines
