--- a/playbooks/roles/setup_common/tasks/ipv6-ionos.yaml
+++ b/playbooks/roles/setup_common/tasks/ipv6-ionos.yaml
@@ -13,3 +13,9 @@
       - "expected: {{ _ipv6_new }}"
       - "current:  {{ ansible_facts.default_ipv6.address }}"
       - "ssh {{ inventory_hostname }} 'service systemd-networkd restart; sleep 3; ip a'"
+
+- name: Ensure Ipv6 address is non-default
+  failed_when: ansible_facts.default_ipv6.address is search('::1$')
+  ansible.builtin.debug:
+    var: ansible_facts.default_ipv6
+    verbosity: 1
