--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -62,15 +62,15 @@
         - ipv6
       block:
         - name: IPv6 Hetzner
-          when: ansible_facts.system_vendor == 'Hetzner'
+          when: ansible_facts.system_vendor == 'Hetzner' and ansible_facts.distribution == 'Debian'
           ansible.builtin.import_tasks: ipv6-hetzner.yaml
 
         - name: IPv6 IONOS
           when: ansible_facts.system_vendor == 'QEMU'
           ansible.builtin.import_tasks: ipv6-ionos.yaml
 
-        - name: Ensure Ipv6 address is global scope and non-default
-          failed_when: ansible_facts.default_ipv6.address is match('fe80::') or ansible_facts.default_ipv6.address is search('::1$')
+        - name: Ensure Ipv6 address is global scope
+          failed_when: ansible_facts.default_ipv6.address is match('fe80::')
           ansible.builtin.debug:
             var: ansible_facts.default_ipv6
             verbosity: 1
@@ -81,6 +81,7 @@
         - firewall
 
     - name: Ensure desired distribution kernel is installed
+      when: ansible_facts.distribution == 'Debian'
       ansible.builtin.import_tasks: kernel-dist.yaml
       tags:
         - kernel
