--- a/playbooks/roles/setup_common/tasks/update.yaml
+++ b/playbooks/roles/setup_common/tasks/update.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Ensure Debian repos for Hetzner VPS are HTTPs
-  when: ansible_facts.system_vendor == 'Hetzner'
+  when: ansible_facts.system_vendor == 'Hetzner' and ansible_facts.distribution in ('Debian')
   block:
     - name: Remove HTTP repos
       retries: 3
