--- a/playbooks/roles/info_snowflake/tasks/metrics.yaml
+++ b/playbooks/roles/info_snowflake/tasks/metrics.yaml
@@ -2,9 +2,9 @@
 - name: File node metrics ready for Prometheus
   delegate_to: localhost
   throttle: "{{ ansible_facts.processor_vcpus }}"
-  when: node_metrics and metrics_port
+  when: snowflake_metrics and metrics_port
   ansible.builtin.lineinfile:
     line: '- targets: ["{{ inventory_hostname }}:{{ metrics_port }}"]'
-    path: "{{ tmp_dir }}/node_metrics.yaml"
+    path: "{{ tmp_dir }}/snowflake_metrics.yaml"
     regex: '^- targets: \["{{ inventory_hostname }}:'
     create: true
