--- a/playbooks/roles/setup_tor/tasks/metrics-ddos.yaml
+++ b/playbooks/roles/setup_tor/tasks/metrics-ddos.yaml
@@ -1,13 +1,13 @@
 ---
 - name: Download DDoS metrics script
   retries: 3
-  when: torutils_metrics
+  when: ddos_metrics
   ansible.builtin.get_url:
     url: "https://github.com/toralf/torutils/raw/main/metrics.sh"
     dest: "/root/metrics.sh"
     mode: "0744"
     force: true
-  register: _metrics_ddos_download
+  register: _ddos_metrics_download
 
 - name: Cron job for DDoS metrics
   ansible.builtin.cron:
@@ -15,31 +15,31 @@
     special_time: reboot
     job: >-
       nice /root/metrics.sh 15
-    state: "{{ torutils_metrics | ternary('present', 'absent') }}"
+    state: "{{ ddos_metrics | ternary('present', 'absent') }}"
 
 - name: Getting process IDs of any running DDoS metrics script
   community.general.pids:
     name: metrics.sh
-  register: _metrics_ddos_pids_2_kill
+  register: _ddos_metrics_pids_2_kill
 
 - name: Ensure no outdated DDoS metrics script is running
-  changed_when: _metrics_ddos_killed.changed
-  when: _metrics_ddos_download.changed or not torutils_metrics
+  changed_when: _ddos_metrics_killed.changed
+  when: _ddos_metrics_download.changed or not ddos_metrics
   ansible.builtin.shell:
     cmd: |-
       kill -0 "{{ item }}" && kill -9 "{{ item }}"
-  with_items: "{{ _metrics_ddos_pids_2_kill.pids }}"
-  register: _metrics_ddos_killed
+  with_items: "{{ _ddos_metrics_pids_2_kill.pids }}"
+  register: _ddos_metrics_killed
 
 - name: Check if DDoS metrics script is running
   community.general.pids:
     name: metrics.sh
-  register: _metrics_ddos_pids_running
+  register: _ddos_metrics_pids_running
 
 - name: Ensure DDoS metrics script is running
-  changed_when: _metrics_ddos_started.changed
-  when: torutils_metrics and (_metrics_ddos_pids_running.pids | length == 0)
+  changed_when: _ddos_metrics_started.changed
+  when: ddos_metrics and (_ddos_metrics_pids_running.pids | length == 0)
   ansible.builtin.shell:
     cmd: |-
       nice /root/metrics.sh 15 &
-  register: _metrics_ddos_started
+  register: _ddos_metrics_started
