new info task: ddos

--- a/playbooks/roles/info_tor/tasks/main.yaml
+++ b/playbooks/roles/info_tor/tasks/main.yaml
@@ -37,6 +37,12 @@
       tags:
         - clients
 
+    - name: DDoS ipsets
+      when: firewall_use_ddos
+      ansible.builtin.import_tasks: ddos.yaml
+      tags:
+        - ddos
+
     - name: Heartbeat
       ansible.builtin.import_tasks: heartbeat.yaml
       tags:
