--- a/playbooks/roles/setup_tor/tasks/firewall-ddos.yaml
+++ b/playbooks/roles/setup_tor/tasks/firewall-ddos.yaml
@@ -42,10 +42,10 @@
   register: _ddos_up
   notify: "Restart DDoS"
 
-- name: Ensure that DDoS is up
+- name: Ensure that DDoS is working
   ansible.builtin.meta: flush_handlers
 
-- name: Create DDoS cron job to start DDoS after reboot
+- name: Create DDoS cron job for reboot
   ansible.builtin.cron:
     name: "start firewall"
     special_time: reboot
@@ -54,7 +54,7 @@
       {{ ddos_add_bridge_v6 }} /root/ipv6-rules.sh start
   notify: "Restart DDoS"
 
-- name: Create DDoS cron job to save ipsets
+- name: Create DDoS cron job to save data (ipsets)
   ansible.builtin.cron:
     name: "save ipset"
     special_time: hourly
@@ -62,7 +62,7 @@
       /root/ipv4-rules.sh save;
       /root/ipv6-rules.sh save
 
-- name: Create DDoS cron job to update Tor authority ip addresses
+- name: Create DDoS cron job to update (Tor authority ip addresses)
   ansible.builtin.cron:
     name: "Tor authority ip addresses update"
     special_time: daily
